# tiny-series

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
LICENSE-templates/: Modified.LICENSE
TinyRenderer/: .gitignore  README.md
TinyRenderer/include/: drawing.h  geometry.h  geometry_new.h  line.h  model.h  model_new.h  our_gl.h  render.h  shader.h  tgaimage.h
TinyRenderer/include/geometry/: mat.h  utils.h  vec.h
TinyRenderer/include/geometry_new/: mat.h  utils.h  vec.h
TinyRenderer/src/: drawing.cpp  line.cpp  main.cpp  model.cpp  model_new.cpp  our_gl.cpp  render.cpp  shader.cpp  tgaimage.cpp
commands/: lint-all.sh
cpps/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpps/LICENSE-templates/: MIT.LICENSE  Original.LICENSE
cpps/TinyRaytracer/: CMakeLists.txt
cpps/TinyRaytracer/include/: light.h  material.h  render.h  shape.h
cpps/TinyRaytracer/main/: default.cpp  wasm.cpp
cpps/TinyRaytracer/src/: render.cpp  shape.cpp
cpps/TinyRenderer/: CMakeLists.txt  README.md
cpps/TinyRenderer/include/: file.h  image.h  model.h  our_gl.h  render.h  shader.h  tgaimage.h
cpps/TinyRenderer/include/geometry/: mat.h  utils.h
cpps/TinyRenderer/legacy/: render.cpp
cpps/TinyRenderer/main/: default.cpp  wasm.cpp
cpps/TinyRenderer/src/: file.cpp  main.cpp  model.cpp  our_gl.cpp  render.cpp  shader.cpp  tgaimage.cpp
cpps/TinyRenderer/wasm/: module.cpp
cpps/commands/: lint-all.sh
cpps/common/: file.cpp  file.h  image.h
cpps/common/geometry/: utils.h  vec.h
page/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
page/public/backgrounds/estate_square/: LICENSE
page/public/models/shark/: LICENSE  shark_diffuse.tga  shark_nm.tga
page/src/: App.tsx  index.css  main.tsx
page/src/components/: Divider.tsx  FieldSetRenderOptions.tsx  Footer.tsx  LoadingCover.tsx  SelectRenderType.tsx  Sidebar.tsx  Spinner.tsx  TitleGroup.tsx
page/src/hooks/: useEmscriptenModule.ts  useInput.ts  useResizeCanvas.ts  useSelect.ts
page/src/icons/: HomeIcon.tsx  MenuIcon.tsx
page/src/layouts/: ContentLayout.tsx
page/src/modules/: FormRenderOptions.hook.tsx  FormRenderOptions.tsx  Navigation.tsx  NavigationPane.hook.ts  NavigationPane.tsx  ResultImage.tsx  SelectRenderType.tsx  TitleGroup.tsx
page/src/modules/tiny-raytracer/: FormRenderOptions.hook.tsx  FormRenderOptions.tsx
page/src/modules/tiny-renderer/: FormRenderOptions.hook.tsx  FormRenderOptions.tsx
page/src/pages/: Home.tsx  Root.tsx
page/src/pages/tiny-raytracer/: index.tsx
page/src/pages/tiny-renderer/: index.tsx
page/src/utils/: emscripten.ts  image.ts  number.ts
page/src/wasm/: TinyRaytracer.d.ts  TinyRaytracer.js  TinyRaytracer.wasm  TinyRenderer.d.ts  TinyRenderer.js  TinyRenderer.wasm  _types.ts  test_exe.d.ts  test_exe.js  test_exe_wasm.wasm
page/src/workers/: tiny-raytracer.ts  tiny-renderer.ts
